Some fixes and changes.